[tool.poetry]
name = "srv"
version = "0.1.0"
description = "Simple file upload server"
authors = ["Anirudh Oppiliappan <x@icyphox.sh>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
python-dotenv = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
